# neocorefx-llvm

./: .gitignore  README.md  build.sh  ncfx-clang  setup.sh
backend/: CMakeLists.txt  NeoCoreFX.h  NeoCoreFX.td  NeoCoreFXAsmPrinter.cpp  NeoCoreFXCallingConv.td  NeoCoreFXFrameLowering.cpp  NeoCoreFXFrameLowering.h  NeoCoreFXISelDAGToDAG.cpp  NeoCoreFXISelLowering.cpp  NeoCoreFXISelLowering.h  NeoCoreFXInstrFormats.td  NeoCoreFXInstrInfo.cpp  NeoCoreFXInstrInfo.h  NeoCoreFXInstrInfo.td  NeoCoreFXPostRATuning.cpp  NeoCoreFXRegisterInfo.cpp  NeoCoreFXRegisterInfo.h  NeoCoreFXRegisterInfo.td  NeoCoreFXSchedule.td  NeoCoreFXSubtarget.cpp  NeoCoreFXSubtarget.h  NeoCoreFXTargetMachine.cpp  NeoCoreFXTargetMachine.h
backend/MCTargetDesc/: CMakeLists.txt  NeoCoreFXAsmBackend.cpp  NeoCoreFXELFObjectWriter.cpp  NeoCoreFXInstPrinter.cpp  NeoCoreFXInstPrinter.h  NeoCoreFXMCAsmInfo.cpp  NeoCoreFXMCAsmInfo.h  NeoCoreFXMCCodeEmitter.cpp  NeoCoreFXMCTargetDesc.cpp  NeoCoreFXMCTargetDesc.h
backend/TargetInfo/: CMakeLists.txt  NeoCoreFXTargetInfo.cpp  NeoCoreFXTargetInfo.h
docs/: bus-architecture.md  c-abi.md  exceptions-future.md  far-branching.md  isa-v0.md  microarchitecture.md  pc-relative.md  pseudoinstructions.md  relocations.md
patches/: 0001-add-neocorefx-triple-and-target.patch
programs/: fibonacci.c  fibonacci.s  monitor.c  monitor.s
programs/neocore-fx/dhrystone/: crt0.s  dhry_1.c  dhry_1.ll  dhry_1.s  dhry_1_o3.s  dhry_2.ll  dhry_2.s  ncx_uart_mmio.h  runtime.c  runtime.s  uart_smoke.s  (+1 more)
tests/: addg.c  run_example.sh  runtime_bool_brcond.ll  test.s
